# torch-rs

./: .gitignore  COMPILATION_FIX_SUMMARY.md  Cargo.toml  MIGRATION_GUIDE.md  PERFORMANCE_GUIDE.md  README.md  TORCH_RS_GUIDE.md  build.sh  requirements.txt  tarpaulin.toml
.cargo/: config.toml
.github/workflows/: rust-ci.yml  test.yml  torch_rs_ci.yml
benches/: torch_rs_benchmarks.rs
examples/: phoenix_dataset_demo.rs  phoenix_demo.rs
examples/notebooks/: 01_getting_started.py  02_computer_vision.py
python/: Cargo.toml  README.md  setup.py
python/examples/: basic_usage.py  train_model.py
python/src/: lib.rs
python/torch_rs/: __init__.py
scripts/: track_errors.sh
src/: lib.rs  lib.rs.backup
src/nn/: derive.rs  metrics.rs  mod.rs  optimizer.rs  phoenix.rs  phoenix_batch_norm.rs  phoenix_conv.rs  phoenix_dropout.rs  phoenix_linear.rs  phoenix_sequential.rs  trainer.rs
src/nn/phoenix_layers/: attention.rs  gru.rs  lstm.rs  mod.rs  positional.rs  transformer.rs
src/optim/: adagrad.rs  adam.rs  adamw.rs  lr_scheduler.rs  mod.rs  phoenix_optimizer.rs  rmsprop.rs  sgd.rs
src/test_utils/: assertions.rs  baseline.rs  coverage.rs  fixtures.rs  harness.rs  memory.rs  mod.rs  runner.rs
src/torch_data/: cifar10.rs  dataloader.rs  dataset.rs  mnist.rs  mod.rs  transforms.rs
tch-vision/: Cargo.toml
tch-vision/src/: lib.rs  transforms.rs
tch-vision/src/models/: mod.rs  resnet.rs  vgg.rs  vit.rs
tests/contract/: test_backward_compat.rs  test_base_compilation.rs  test_baseline_api.rs  test_coverage_api.rs  test_execution_api.rs  test_fixture_api.rs  test_module_imports.rs  test_optimizer_value.rs  test_python_bridge.rs  test_resnet_loading.rs  test_torch_compile.rs  test_torch_rs_compilation.rs  test_trainer_fit.rs  test_vgg_loading.rs  test_vit_loading.rs
tests/integration/: data_pipeline.rs  model_save_load.rs  test_lightning_training.rs  test_pretrained_accuracy.rs  training_workflow.rs
tests/phoenix/: test_dataset_contract.rs  test_model_definition.rs  test_module_contract.rs  test_optimizer_contract.rs  test_pretrained_models.rs
torch-sys/libtch/: torch_api.cpp
