[package]
name = "tch"
version = "0.21.0"
authors = ["Laurent Mazare <lmazare@gmail.com>"]
edition = "2021"
build = "build.rs"

description = "Rust wrappers for the PyTorch C++ api (libtorch)."
repository = "https://github.com/LaurentMazare/tch-rs"
keywords = ["pytorch", "deep-learning", "machine-learning"]
categories = ["science"]
license = "MIT/Apache-2.0"
readme = "README.md"

exclude = [
    "examples/stable-diffusion/media/*",
]

[dependencies]
lazy_static = "1.3.0"
libc = "0.2.0"
ndarray = "0.16.1"
rand = "0.8"
thiserror = "1"
torch-sys = { version = "0.21.0", path = "torch-sys" }
zip = "0.6"
half = "2"
safetensors = "0.3.0"
chrono = "0.4"

# Phoenix feature dependencies
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }
syn = { version = "2.0", features = ["full"], optional = true }

cpython = { version = "0.7.1", optional = true }
pyo3 = { version = "0.24", optional = true }
regex = { version = "1.6.0", optional = true }
image = { version = "0.24.5", optional = true }
clap = { version = "4.2.4", features = ["derive"], optional = true }
serde_json = { version = "1.0.96", optional = true }
memmap2 = { version = "0.6.1", optional = true }
flate2 = { version = "1.0", optional = true }
indicatif = { version = "0.17", optional = true }

[dev-dependencies]
anyhow = "^1.0.60"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
serial_test = "3.0"
approx = "0.5"
tempfile = "3.8"
pretty_assertions = "1.4"

[workspace]
members = [
  "torch-sys",
  "pyo3-tch",
  "tch-vision",
  "examples/python-extension",
]

[features]
download-libtorch = ["torch-sys/download-libtorch"]
python-extension = ["torch-sys/python-extension"]
rl-python = ["cpython"]
doc-only = ["torch-sys/doc-only"]
cuda-tests = []
# torch-rs enhanced features
torch-rs = ["proc-macro2", "quote", "syn", "flate2", "indicatif"]
python-compat = ["pyo3", "torch-rs"]

[package.metadata.docs.rs]
features = [ "doc-only" ]

[[example]]
name = "reinforcement-learning"
required-features = ["rl-python"]

[[example]]
name = "stable-diffusion"
required-features = ["regex"]

[[example]]
name = "llama"
required-features = ["regex", "clap", "serde_json", "memmap2"]

[[bench]]
name = "torch_rs_benchmarks"
harness = false
required-features = ["torch-rs"]
